# showmethisip.com

./: .deepsource.toml  .dockerignore  .gitignore  Dockerfile  README.md  app.py  app_requirements.txt  pyproject.toml  zappa_requirements.txt  zappa_settings.json
.github/workflows/: build_and_update_dev.yaml  build_and_update_production.yaml
scripts/: bootstrap.sh  build.sh  update.sh
templates/: ip.html  ip_new.html  layout.html
