[tool.poetry]
name = "showmethisip.com"
version = "0.1.0"
description = ""
authors = ["David Howell"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^2.0.1"
zappa = "^0.53.0"
environs = "^9.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
