[tool.poetry]
name = "showmethisip.com"
version = "0.1.0"
description = ""
authors = ["David Howell <david@davidjameshowell.com>"]

[tool.poetry.dependencies]
python = "^3.7"
poetry = "^1.1.8"
zappa = {git = "https://github.com/phil-airship/Zappa.git", rev = "cc6ad1beefb0fa96625a6cbb01146d0b3a5a414e"}
Flask = "^2.0.1"
environs = "^9.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
